# quake2-source-archive

./: .gitignore  CMakeLists.txt  README.md  generate_build_matrix.py  get_mod_list.py
.github/: dependabot.yml
.github/workflows/: build-mod.yml  build-mods.yml
cmake/mods/: _q2pro.cmake  _quake2.cmake  action.cmake  arquade.cmake  coopordie.cmake  ctc.cmake  ctf.cmake  gravitybone.cmake  hideandseek.cmake  kots.cmake  lazarus.cmake  napalm.cmake  niq2.cmake  paintball2.cmake  quakewho.cmake  servobit.cmake  sog.cmake  spaq.cmake  sw.cmake  swq.cmake  vortex.cmake
sources/ctc/chicken/: ctc.c
